--- a/src/dialogs/dialog-avatar.html
+++ b/src/dialogs/dialog-avatar.html
@@ -16,11 +16,11 @@
         <span class="form-error anim anim--fade" data-error>Пожалуйста, загрузите изображение!</span>
       </div>
       <div class="flex flex-wrap align-center justify-between gap-4 w-100">
-        <label class="btn btn--second btn--lg btn--fill flex-grow" data-waved>
+        <label class="btn btn--second btn--lg btn--fill flex-grow" data-waved="dark">
           <input class="d-none" data-input="file" type="file" name="file[]">
           Загрузить
         </label>
-        <button class="btn btn--second btn--lg btn--fade btn--contur flex-grow" data-waved type="button">Удалить</button>
+        <button class="btn btn--second btn--lg btn--fade btn--contur flex-grow" data-waved="dark" type="button">Удалить</button>
       </div>
     </div>
   </form>
