--- a/src/dialogs/dialog-submit.html
+++ b/src/dialogs/dialog-submit.html
@@ -4,5 +4,5 @@
       <use xlink:href="img/icons.svg#success">
     </svg>
   </div>
-  <h4 class="text text--center text-22 bold-6 lh-3">Ваша заявка успешно отправлена!</h4>
+  <h4 class="text-center text-22 bold-6 lh-3">Ваша заявка успешно отправлена!</h4>
 </div>
