--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 
 <!-- Кнопки -->
 
-<% var buttons = ['', 'btn--contur', 'btn--fade', 'btn--contur btn--fade', 'btn--fill', 'btn--light', 'btn--lg', 'btn--md', 'btn--contur btn--swipe', 'btn--fill btn--glow', 'data-waved="light"', 'data-waved="dark"', 'data-bubbles="hidden"', 'btn--rect', 'btn--frame', 'btn--lines'] %>
+<% var buttons = ['', 'btn--contur', 'btn--fade', 'btn--contur btn--fade', 'btn--fill', 'btn--light', 'btn--lg', 'btn--sm', 'btn--contur btn--swipe', 'btn--fill btn--glow', 'data-waved="light"', 'data-waved="dark"', 'data-bubbles="hidden"', 'btn--rect', 'btn--frame', 'btn--lines'] %>
 
 <section class="buttons container container--sm bg-white overflow-hidden">
   <h2 class="font-alt text-center text-40 text-md-50 bold-7 lh-4 shadow-text mb-3 anim anim--up" data-movement="blend" data-anim="hidden">Buttons</h2>
