--- a/src/second.html
+++ b/src/second.html
@@ -131,7 +131,7 @@
           <use xlink:href="img/icons.svg#play">
         </svg>
       </button>
-      <button class="btn btn--second btn--md btn--light" data-timer-reset data-waved="dark">Reset</button>
+      <button class="btn btn--second btn--sm btn--light" data-timer-reset data-waved="dark">Reset</button>
     </div>
   </div>
 </section>
