--- a/src/dialogs/dialog-politics.html
+++ b/src/dialogs/dialog-politics.html
@@ -1,4 +1,4 @@
-<div class="dialog dialog--xl radius-3 p-5 p-md-10">
+<div class="dialog dialog--lg radius-3 p-5 p-md-10">
   <h2 class="text-center text-32 bold-7 lh-2 mb-4">Соглашение</h2>
   <h3 class="text-center text-22 bold-6 lh-4 mb-5">об обработке персональных данных</h3>
   <p class="text-14 text-md-16 bold-5 lh-4">
