--- a/src/dialogs/dialog-politics.html
+++ b/src/dialogs/dialog-politics.html
@@ -1,12 +1,24 @@
-<div class="dialog dialog--lg radius-3 p-5 p-md-10">
-  <h2 class="text-center text-32 bold-7 lh-2 mb-4">Соглашение</h2>
-  <h3 class="text-center text-22 bold-6 lh-4 mb-5">об обработке персональных данных</h3>
-  <p class="text-14 text-md-16 bold-5 lh-4">
-    Данное соглашение об обработке персональных данных разработано в соответствии с законодательством Российской Федерации.<br>
-    Все лица заполнившие сведения, составляющие персональные данные на данном сайте, а также разместившие иную информацию обозначенными действиями, подтверждают свое согласие на обработку персональных данных и их передачу оператору обработки персональных данных.<br>
-    Под персональными данными Гражданина понимается нижеуказанная информация:<br>
-    Общая информация (Имя, номер телефона и адрес электронной почты); посетители сайта направляют свои персональные данные для получения телефонного звонка или сообщения электронной почты от специалиста компании-исполнителя (владельца сайта) с целью заказа консультации относительно услуг компании-исполнителя.<br>
-    Гражданин, принимая настоящее Соглашение, выражает свою заинтересованность и полное согласие, что обработка их персональных данных может включать в себя следующие действия: сбор, систематизацию, накопление, хранение, уточнение (обновление, изменение), использование, уничтожение.<br>
-    Гражданин гарантирует: информация, им предоставленная, не нарушает действующее законодательство Российской Федерации, законные права и интересы третьих лиц; вся предоставленная информация заполнена Гражданином в отношении себя лично.
-  </p>
+<div class="dialog dialog--lg dialog--politics relative overflow-hidden p-5 p-md-10">
+  <div class="dialog__blur blur color-grey"></div>
+  <div class="relative">
+    <h2 class="font-alt text-20 text-md-28 text-lg-36 bold-6 lh-2 mb-5 mb-md-10">Cоглашение на обработку персональных данных</h2>
+    <p class="text-14 text-md-18 text-lg-22 bold-3 lh-2 mb-5">
+      Данное соглашение об обработке персональных данных разработано в соответствии с законодательством Российской Федерации.
+    </p>
+    <p class="text-14 text-md-18 text-lg-22 bold-3 lh-2 mb-5">
+      Все лица заполнившие сведения, составляющие персональные данные на данном сайте, а также разместившие иную информацию обозначенными действиями, подтверждают свое согласие на обработку персональных данных и их передачу оператору обработки персональных данных.
+    </p>
+    <p class="text-14 text-md-18 text-lg-22 bold-3 lh-2 mb-5">
+      Под персональными данными Гражданина понимается нижеуказанная информация:
+    </p>
+    <p class="text-14 text-md-18 text-lg-22 bold-3 lh-2 mb-5">
+      Общая информация (Имя, номер телефона и адрес электронной почты); посетители сайта направляют свои персональные данные для получения телефонного звонка или сообщения электронной почты от специалиста компании-исполнителя (владельца сайта) с целью заказа консультации относительно услуг компании-исполнителя.
+    </p>
+    <p class="text-14 text-md-18 text-lg-22 bold-3 lh-2 mb-5">
+      Гражданин, принимая настоящее Соглашение, выражает свою заинтересованность и полное согласие, что обработка  их персональных данных может включать в себя следующие действия: сбор, систематизацию, накопление, хранение, уточнение (обновление, изменение), использование, уничтожение.
+    </p>
+    <p class="text-14 text-md-18 text-lg-22 bold-3 lh-2 mb-5">
+      Гражданин гарантирует: информация, им предоставленная, не нарушает действующее законодательство Российской Федерации, законные права и интересы третьих лиц; вся предоставленная информация заполнена Гражданином в отношении себя лично.
+    </p>
+  </div>
 </div>
