--- a/src/dialogs/dialog-submit.html
+++ b/src/dialogs/dialog-submit.html
@@ -1,8 +1,13 @@
-<div class="dialog dialog--sm flex flex-column align-center justify-center radius-3 py-10 px-5">
-  <div class="color-green text-50 mb-5">
-    <svg class="icon zoom-3">
-      <use xlink:href="img/icons.svg#success">
-    </svg>
+<div class="dialog dialog--sm dialog--submit relative overflow-hidden py-10 px-5">
+  <div class="dialog__blur blur color-grey"></div>
+  <div class="flex flex-column align-center justify-center relative">
+    <div class="text-30 text-lg-40 mb-md-5">
+      <svg class="icon zoom-4">
+        <use xlink:href="img/icons.svg#success">
+      </svg>
+    </div>
+    <div class="text-center text-14 text-md-20 text-lg-26" data-movement="blend">
+      <h2 class="font-alt bold-6 lh-4 zoom-2">Успешно <br> отправлено</h2>
+    </div>
   </div>
-  <h4 class="text-center text-22 bold-6 lh-3">Ваша заявка успешно отправлена!</h4>
 </div>
