add some animations

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   title: 'Energelica',
   status: true
 
-} %>
+}; %>
 
 <%= _.template(require('./includes/header.html').default)({data}) %>
 
@@ -60,7 +60,7 @@
     pack: 'box',
     img: '4'
   }
-] %>
+]; %>
 
 <section class="gallery container p-md-10">
   <div class="grid gap-4 gap-md-7">
@@ -103,7 +103,7 @@
     number: '150',
     text: 'Частных мероприятий'
   }
-] %>
+]; %>
 
 <section class="result container" data-result>
   <div class="grid gap-4 gap-md-2 gap-lg-5">
@@ -183,7 +183,7 @@
     items: ['Свадьбы', 'Выездные регистрации', 'Годовщины'],
     btn: 'Смотреть проекты'
   }
-] %>
+]; %>
 
 <section class="services container flex flex-column align-center justify-center px-lg-10" id="services">
   <div class="text-center text-uppercase text-14 text-md-20 text-lg-26 mb-5 mb-md-10" data-movement="blend">
@@ -266,7 +266,7 @@
     title: 'Корпоративные подарки',
     text: 'Разрабатываем корпоративные сувениры и подарки для ваших сотрудников, клиентов и партнеров'
   }
-] %>
+]; %>
 
 <section class="advantages container container--sm flex flex-column align-center justify-center" data-listing id="advantages">
   <div class="text-center text-uppercase text-14 text-md-20 text-lg-26 mb-5 mb-md-10" data-movement="blend">
@@ -363,7 +363,7 @@
     img: '4',
     title: 'Заряд энергии и взрыв <br> эмоций'
   }
-] %>
+]; %>
 
 <section class="events container flex flex-column align-center justify-center px-lg-10">
   <div class="text-center text-uppercase text-14 text-md-20 text-lg-26 mb-5 mb-md-10" data-movement="blend">
@@ -402,7 +402,7 @@
 
 <!-- Партнеры -->
 
-<% var partners = ['1', '2', '3', '1', '2', '3'] %>
+<% var partners = ['1', '2', '3', '1', '2', '3']; %>
 
 <section class="partners container flex flex-column align-center justify-center overflow-hidden" id="partners">
   <div class="text-center text-uppercase text-14 text-md-20 text-lg-26 mb-5 mb-md-10" data-movement="blend">
